--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             green: {
               900: "#01AEA5"
             },
-            grey: {
+            gray: {
               900: "#d9d9d9"
             }
           }
@@ -447,16 +447,16 @@
       </button>
     </div>
   </section>
-  <footer class="border-y border-solid border-white/10 w-full">
-    <div class="mx-auto max-w-[1200px] flex justify-between py-16">
-      <div class="text-sm text-white/60">Copyright © 2024 Chainmind. All rights reserved.</div>
-      <div class="text-sm text-white/60 flex items-center gap-10">
-        <a href="#">Privacy Policy</a>
-        <a href="#">Terms of Use</a>
-      </div>
-    </div>
-  </footer>
 </main>
+<footer class="border-y border-solid border-white/10 w-full">
+  <div class="mx-auto max-w-[1200px] flex justify-between py-16">
+    <div class="text-sm text-white/60">Copyright © 2024 Chainmind. All rights reserved.</div>
+    <div class="text-sm text-white/60 flex items-center gap-10">
+      <a href="#">Privacy Policy</a>
+      <a href="#">Terms of Use</a>
+    </div>
+  </div>
+</footer>
 </body>
 
 </html>
