--- a/marketplace.html
+++ b/marketplace.html
@@ -98,9 +98,11 @@
       <div class="flex items-center gap-4">
         <div class="flex items-center gap-4">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M4 11C4 7.13401 7.13401 4 11 4C14.866 4 18 7.13401 18 11C18 12.8858 17.2543 14.5974 16.0417 15.8561C16.0073 15.8825 15.9743 15.9114 15.9428 15.9429C15.9113 15.9744 15.8824 16.0074 15.856 16.0418C14.5973 17.2543 12.8857 18 11 18C7.13401 18 4 14.866 4 11ZM16.6176 18.0319C15.078 19.2635 13.125 20 11 20C6.02944 20 2 15.9706 2 11C2 6.02944 6.02944 2 11 2C15.9706 2 20 6.02944 20 11C20 13.125 19.2635 15.0781 18.0319 16.6177L21.707 20.2929C22.0975 20.6834 22.0975 21.3166 21.707 21.7071C21.3165 22.0976 20.6833 22.0976 20.2928 21.7071L16.6176 18.0319Z" fill="white" fill-opacity="0.4"/>
+            <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M4 11C4 7.13401 7.13401 4 11 4C14.866 4 18 7.13401 18 11C18 12.8858 17.2543 14.5974 16.0417 15.8561C16.0073 15.8825 15.9743 15.9114 15.9428 15.9429C15.9113 15.9744 15.8824 16.0074 15.856 16.0418C14.5973 17.2543 12.8857 18 11 18C7.13401 18 4 14.866 4 11ZM16.6176 18.0319C15.078 19.2635 13.125 20 11 20C6.02944 20 2 15.9706 2 11C2 6.02944 6.02944 2 11 2C15.9706 2 20 6.02944 20 11C20 13.125 19.2635 15.0781 18.0319 16.6177L21.707 20.2929C22.0975 20.6834 22.0975 21.3166 21.707 21.7071C21.3165 22.0976 20.6833 22.0976 20.2928 21.7071L16.6176 18.0319Z"
+                  fill="white" fill-opacity="0.4"/>
           </svg>
-          <input class="placeholder:uppercase bg-transparent outline-none" type="text" placeholder="Search" >
+          <input class="placeholder:uppercase bg-transparent outline-none" type="text" placeholder="Search">
         </div>
         <select class="bg-transparent">
           <option>Recommended</option>
@@ -179,31 +181,33 @@
         </div>
       </div>
     </div>
-    <div class="flex items-center mt-16 divide-x divide-white/5 border border-solid border-white/5">
-      <div class="h-14 w-14 flex items-center justify-center cursor-pointer">
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M16.5 8L13 12L16.5 16" stroke="white" stroke-width="1.5" stroke-linecap="round"
-                stroke-linejoin="round"/>
-          <path d="M8.5 16L8.5 8" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-        </svg>
-      </div>
-      <div class="h-14 w-14 flex items-center justify-center text-green-900 bg-gray-900/5 cursor-pointer">1</div>
-      <div class="h-14 w-14 flex items-center justify-center cursor-pointer">2</div>
-      <div class="h-14 w-14 flex items-center justify-center cursor-pointer">
-        <svg width="20" height="6" viewBox="0 0 20 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M2.59357 5.13068C2.19253 5.13068 1.82629 5.03291 1.49485 4.83736C1.16341 4.63849 0.89826 4.37334 0.699396 4.0419C0.503847 3.71046 0.406072 3.34422 0.406072 2.94318C0.406072 2.53883 0.503847 2.17259 0.699396 1.84446C0.89826 1.51302 1.16341 1.24953 1.49485 1.05398C1.82629 0.855113 2.19253 0.755682 2.59357 0.755682C2.99793 0.755682 3.36417 0.855113 3.69229 1.05398C4.02373 1.24953 4.28723 1.51302 4.48278 1.84446C4.68164 2.17259 4.78107 2.53883 4.78107 2.94318C4.78107 3.34422 4.68164 3.71046 4.48278 4.0419C4.28723 4.37334 4.02373 4.63849 3.69229 4.83736C3.36417 5.03291 2.99793 5.13068 2.59357 5.13068ZM10.0037 5.13068C9.60269 5.13068 9.23645 5.03291 8.90501 4.83736C8.57357 4.63849 8.30842 4.37334 8.10955 4.0419C7.914 3.71046 7.81623 3.34422 7.81623 2.94318C7.81623 2.53883 7.914 2.17259 8.10955 1.84446C8.30842 1.51302 8.57357 1.24953 8.90501 1.05398C9.23645 0.855113 9.60269 0.755682 10.0037 0.755682C10.4081 0.755682 10.7743 0.855113 11.1025 1.05398C11.4339 1.24953 11.6974 1.51302 11.8929 1.84446C12.0918 2.17259 12.1912 2.53883 12.1912 2.94318C12.1912 3.34422 12.0918 3.71046 11.8929 4.0419C11.6974 4.37334 11.4339 4.63849 11.1025 4.83736C10.7743 5.03291 10.4081 5.13068 10.0037 5.13068ZM17.4139 5.13068C17.0128 5.13068 16.6466 5.03291 16.3152 4.83736C15.9837 4.63849 15.7186 4.37334 15.5197 4.0419C15.3242 3.71046 15.2264 3.34422 15.2264 2.94318C15.2264 2.53883 15.3242 2.17259 15.5197 1.84446C15.7186 1.51302 15.9837 1.24953 16.3152 1.05398C16.6466 0.855113 17.0128 0.755682 17.4139 0.755682C17.8182 0.755682 18.1845 0.855113 18.5126 1.05398C18.844 1.24953 19.1075 1.51302 19.3031 1.84446C19.502 2.17259 19.6014 2.53883 19.6014 2.94318C19.6014 3.34422 19.502 3.71046 19.3031 4.0419C19.1075 4.37334 18.844 4.63849 18.5126 4.83736C18.1845 5.03291 17.8182 5.13068 17.4139 5.13068Z"
-            fill="white" fill-opacity="0.64"/>
-        </svg>
-      </div>
-      <div class="h-14 w-14 flex items-center justify-center cursor-pointer">9</div>
-      <div class="h-14 w-14 flex items-center justify-center cursor-pointer">10</div>
-      <div class="h-14 w-14 flex items-center justify-center cursor-pointer">
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M7.5 8L11 12L7.5 16" stroke="white" stroke-width="1.5" stroke-linecap="round"
-                stroke-linejoin="round"/>
-          <path d="M15.5 16L15.5 8" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-        </svg>
+    <div class="flex justify-center items-center mt-16">
+      <div class="flex items-center divide-x divide-white/5 border border-solid border-white/5">
+        <div class="h-14 w-14 flex items-center justify-center cursor-pointer">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M16.5 8L13 12L16.5 16" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+            <path d="M8.5 16L8.5 8" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </div>
+        <div class="h-14 w-14 flex items-center justify-center text-green-900 bg-gray-900/5 cursor-pointer">1</div>
+        <div class="h-14 w-14 flex items-center justify-center cursor-pointer">2</div>
+        <div class="h-14 w-14 flex items-center justify-center cursor-pointer">
+          <svg width="20" height="6" viewBox="0 0 20 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M2.59357 5.13068C2.19253 5.13068 1.82629 5.03291 1.49485 4.83736C1.16341 4.63849 0.89826 4.37334 0.699396 4.0419C0.503847 3.71046 0.406072 3.34422 0.406072 2.94318C0.406072 2.53883 0.503847 2.17259 0.699396 1.84446C0.89826 1.51302 1.16341 1.24953 1.49485 1.05398C1.82629 0.855113 2.19253 0.755682 2.59357 0.755682C2.99793 0.755682 3.36417 0.855113 3.69229 1.05398C4.02373 1.24953 4.28723 1.51302 4.48278 1.84446C4.68164 2.17259 4.78107 2.53883 4.78107 2.94318C4.78107 3.34422 4.68164 3.71046 4.48278 4.0419C4.28723 4.37334 4.02373 4.63849 3.69229 4.83736C3.36417 5.03291 2.99793 5.13068 2.59357 5.13068ZM10.0037 5.13068C9.60269 5.13068 9.23645 5.03291 8.90501 4.83736C8.57357 4.63849 8.30842 4.37334 8.10955 4.0419C7.914 3.71046 7.81623 3.34422 7.81623 2.94318C7.81623 2.53883 7.914 2.17259 8.10955 1.84446C8.30842 1.51302 8.57357 1.24953 8.90501 1.05398C9.23645 0.855113 9.60269 0.755682 10.0037 0.755682C10.4081 0.755682 10.7743 0.855113 11.1025 1.05398C11.4339 1.24953 11.6974 1.51302 11.8929 1.84446C12.0918 2.17259 12.1912 2.53883 12.1912 2.94318C12.1912 3.34422 12.0918 3.71046 11.8929 4.0419C11.6974 4.37334 11.4339 4.63849 11.1025 4.83736C10.7743 5.03291 10.4081 5.13068 10.0037 5.13068ZM17.4139 5.13068C17.0128 5.13068 16.6466 5.03291 16.3152 4.83736C15.9837 4.63849 15.7186 4.37334 15.5197 4.0419C15.3242 3.71046 15.2264 3.34422 15.2264 2.94318C15.2264 2.53883 15.3242 2.17259 15.5197 1.84446C15.7186 1.51302 15.9837 1.24953 16.3152 1.05398C16.6466 0.855113 17.0128 0.755682 17.4139 0.755682C17.8182 0.755682 18.1845 0.855113 18.5126 1.05398C18.844 1.24953 19.1075 1.51302 19.3031 1.84446C19.502 2.17259 19.6014 2.53883 19.6014 2.94318C19.6014 3.34422 19.502 3.71046 19.3031 4.0419C19.1075 4.37334 18.844 4.63849 18.5126 4.83736C18.1845 5.03291 17.8182 5.13068 17.4139 5.13068Z"
+              fill="white" fill-opacity="0.64"/>
+          </svg>
+        </div>
+        <div class="h-14 w-14 flex items-center justify-center cursor-pointer">9</div>
+        <div class="h-14 w-14 flex items-center justify-center cursor-pointer">10</div>
+        <div class="h-14 w-14 flex items-center justify-center cursor-pointer">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7.5 8L11 12L7.5 16" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+            <path d="M15.5 16L15.5 8" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </div>
       </div>
     </div>
   </section>
