--- a/modal-1.html
+++ b/modal-1.html
@@ -68,109 +68,207 @@
   </script>
 </head>
 
-<body class="bg-black-900 text-white">
-<div class="p-2">
-  <header class="relative h-32 px-28 bg-black-800 flex items-center justify-between overflow-hidden">
-    <div class="bg-purple-700 blur-[50px] absolute left-28 -top-28 z-0 w-[200px] h-[200px]"></div>
-    <div class="flex items-center gap-16 z-10">
-      <a href="#">
-        <img class="h-14" src="img/logo.png" alt="logo">
-      </a>
-      <nav class="text-white/60 flex items-center gap-16">
-        <a class="uppercase text-base tracking-wide" href="#">Product</a>
-        <a class="uppercase text-base tracking-wide" href="#">Explore</a>
-        <a class="uppercase text-base tracking-wide" href="#">Save & Share</a>
-        <a class="uppercase text-base tracking-wide" href="#">AI Analysis</a>
-      </nav>
-    </div>
-    <button class="uppercase bg-white/10 px-8 text-white h-10 z-10 text-sm font-bold tracking-wider">Get Member Access
-    </button>
-    <div class="bg-purple-700 blur-[50px] absolute right-28 -bottom-28 z-0 w-[200px] h-[200px]"></div>
-  </header>
-</div>
-<main>
-  <section class="mt-20 mx-auto max-w-[1200px]">
-    <div class="flex items-center justify-between">
-      <div class="flex items-center gap-4">
-        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M22.0002 10.6667L17.3335 16L22.0002 21.3333" stroke="white" stroke-width="2" stroke-linecap="round"
-                stroke-linejoin="round"/>
-          <path d="M11.3332 21.3333L11.3332 10.6667" stroke="white" stroke-width="2" stroke-linecap="round"
-                stroke-linejoin="round"/>
-        </svg>
-        <h1 class="uppercase text-[40px]">
-          Categories
-        </h1>
-      </div>
-      <div class="flex items-center gap-2">
-        <button class="flex items-center gap-2 uppercase px-8 h-10 text-base font-bold tracking-wider text-green-900">
-          Clear All
-        </button>
-        <button
-          class="flex items-center gap-2 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-8 h-10 text-base font-bold tracking-wider">
-          Save Changes
-        </button>
-      </div>
-    </div>
-    <div class="grid grid-cols-6 gap-8 mt-16">
-      <div
-        class="w-full h-[144px] text-sm font-semibold text-white flex justify-center items-center border border-solid border-white/5 bg-pattern bg-center bg-no-repeat bg-cover">
-        Mystic Axie
-      </div>
-      <div
-        class="w-full h-[144px] text-sm font-semibold text-white flex justify-center items-center border border-solid border-white/5 bg-pattern bg-center bg-no-repeat bg-cover">
-        ORIGIN Axie
-      </div>
-      <div
-        class="w-full h-[144px] text-sm font-semibold text-white flex justify-center items-center border border-solid border-white/5 bg-pattern bg-center bg-no-repeat bg-cover">
-        Japanese Axie
-      </div>
-      <div
-        class="w-full h-[144px] text-sm font-semibold text-white flex justify-center items-center border border-solid border-white/5 bg-pattern bg-center bg-no-repeat bg-cover">
-        Xmas Axie
-      </div>
-      <div
-        class="w-full h-[144px] text-sm font-semibold text-white flex justify-center items-center border border-solid border-white/5 bg-pattern bg-center bg-no-repeat bg-cover">
-        Summer Axie
-      </div>
-      <div
-        class="w-full h-[144px] text-sm font-semibold text-white flex justify-center items-center border border-solid border-green-900 bg-pattern bg-center bg-no-repeat bg-cover">
-        Xmas Axie
-      </div>
-    </div>
-  </section>
-  <section class="mt-32 border-y border-solid border-white/10 w-full">
-    <div class="mx-auto max-w-[1200px] flex justify-between py-16">
-      <div class="flex items-center gap-6">
-        <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M51.5001 38.5005C51.5001 39.6498 51.0435 40.752 50.2309 41.5646C49.4182 42.3773 48.316 42.8338 47.1667 42.8338H21.1667L12.5001 51.5005V16.8338C12.5001 15.6846 12.9566 14.5823 13.7693 13.7697C14.5819 12.957 15.6841 12.5005 16.8334 12.5005H47.1667C48.316 12.5005 49.4182 12.957 50.2309 13.7697C51.0435 14.5823 51.5001 15.6846 51.5001 16.8338V38.5005Z"
-            stroke="white" stroke-width="4.4443" stroke-linecap="round" stroke-linejoin="round"/>
-          <path
-            d="M28.4999 54.5005C28.4999 55.6498 28.9565 56.752 29.7691 57.5646C30.5818 58.3773 31.684 58.8338 32.8333 58.8338H58.8333L67.4999 67.5005V32.8338C67.4999 31.6846 67.0434 30.5823 66.2307 29.7697C65.4181 28.957 64.3159 28.5005 63.1666 28.5005H32.8333C31.684 28.5005 30.5818 28.957 29.7691 29.7697C28.9565 30.5823 28.4999 31.6846 28.4999 32.8338V54.5005Z"
-            stroke="#01AEA5" stroke-width="4.4443" stroke-linecap="round" stroke-linejoin="round"/>
-        </svg>
-        <div class="flex flex-col gap-2">
-          <span class="text-2xl font-medium uppercase">Membership Entrance</span>
-          <span class="text-white/60">Already hold the CARDS 404 Collective NFT? Authenticate your NFT, and jump into the conversation!</span>
+<body class="bg-[#4C4CA6]/30 backdrop-blur-md h-screen">
+<div
+  class="fixed top-1/2 left-1/2 bg-[#06020C] w-full max-w-[995px] -translate-x-1/2 -translate-y-1/2 overflow-hidden mt-20">
+  <div class="flex mb-8 text-white">
+    <img class="h-96 w-96 min-w-96 border border-solid border-white/5" src="img/placeholder.png" alt="">
+    <div class="p-8 w-full flex flex-col justify-between">
+      <div>
+        <div class="flex items-center">
+          <img class="w-8 h-8 mr-4" src="img/nft.png" alt="">
+          <span class="text-lg font-medium mr-2">Azuki</span>
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7.5 8L11 12L7.5 16" stroke="white" stroke-opacity="0.48" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+            <path d="M15.5 16L15.5 8" stroke="white" stroke-opacity="0.48" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+          </svg>
+        </div>
+        <div class="flex items-center justify-between mt-6">
+          <div class="text-2xl font-semibold">Puff Genesis #187</div>
+          <button class="flex items-center gap-2 py-2 px-8 border border-solid border-white/5">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M16 19C17.1046 19 18 18.1046 18 17C18 15.8954 17.1046 15 16 15C14.8954 15 14 15.8954 14 17C14 18.1046 14.8954 19 16 19Z"
+                stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              <path
+                d="M6 14C7.10457 14 8 13.1046 8 12C8 10.8954 7.10457 10 6 10C4.89543 10 4 10.8954 4 12C4 13.1046 4.89543 14 6 14Z"
+                stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M8.5 13.5L13.5 16.5" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round"/>
+              <path
+                d="M16 8C17.1046 8 18 7.10457 18 6C18 4.89543 17.1046 4 16 4C14.8954 4 14 4.89543 14 6C14 7.10457 14.8954 8 16 8Z"
+                stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M13.5 7.5L8.5 10.5" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round"/>
+            </svg>
+            Share
+          </button>
+        </div>
+        <div class="flex items-center gap-2 mt-6 font-medium">
+          <div class="uppercase text-white/50">Owned By:</div>
+          <div>0x9bd1...33DD</div>
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7.5 8L11 12L7.5 16" stroke="white" stroke-opacity="0.48" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+            <path d="M15.5 16L15.5 8" stroke="white" stroke-opacity="0.48" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+          </svg>
         </div>
       </div>
-      <button
-        class="flex items-center gap-2 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-10 h-14 text-base font-bold tracking-wider">
-        Member Access
-      </button>
+      <div class="flex items-center justify-between">
+        <div class="flex items-center gap-4">
+          <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_266_4333)">
+              <path
+                d="M12.2316 16.8083L19.9999 9.04004L27.7719 16.8117L32.2919 12.2917L19.9999 7.62939e-05L7.71197 12.288L12.2318 16.808L12.2316 16.8083ZM0 20L4.52014 15.4792L9.03996 19.999L4.51982 24.5192L0 20ZM12.2316 23.1921L19.9999 30.96L27.7717 23.1885L32.2941 27.706L32.2919 27.7084L19.9999 39.9999L7.71197 27.712L7.70557 27.7056L12.2321 23.1917L12.2316 23.1921ZM30.9599 20.0019L35.48 15.4818L39.9998 20.0016L35.4799 24.5217L30.9599 20.0019Z"
+                fill="#F3BA2F"/>
+              <path
+                d="M24.5844 19.9977H24.5863L20.0001 15.411L16.6102 18.8001L16.2207 19.1897L15.4175 19.993L15.4111 19.9993L15.4175 20.0058L20.0001 24.5891L24.5866 20.0025L24.5889 19.9999L24.5847 19.9977"
+                fill="#F3BA2F"/>
+            </g>
+            <defs>
+              <clipPath id="clip0_266_4333">
+                <rect width="40" height="39.9998" fill="white"/>
+              </clipPath>
+            </defs>
+          </svg>
+          <div class="flex items-center gap-2">
+            <span class="font-semibold text-3xl">0.50</span>
+            <span class="text-sm font-semibold">BNB</span>
+            <span class="text-white/50">≈ $ 304.40</span>
+          </div>
+        </div>
+        <button
+          class="flex items-center gap-4 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-10 h-14 text-base font-bold tracking-wider">
+          Buy Now
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7.5 8.0002L11 12.0002L7.5 16.0002" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+            <path d="M15.5 16.0002L15.5 8.0002" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+          </svg>
+        </button>
+      </div>
     </div>
-  </section>
-</main>
-<footer class="border-y border-solid border-white/10 w-full">
-  <div class="mx-auto max-w-[1200px] flex justify-between py-16">
-    <div class="text-sm text-white/60">Copyright © 2024 Chainmind. All rights reserved.</div>
-    <div class="text-sm text-white/60 flex items-center gap-10">
-      <a href="#">Privacy Policy</a>
-      <a href="#">Terms of Use</a>
+
+  </div>
+  <div class="p-8">
+    <div class="text-white/50 uppercase mb-2 font-medium">Description:</div>
+    <p class="text-sm text-white mb-8">Timefall Valley is a small city that has always remained isolated from the
+      outside world. It is a time capsule, reminding us of a cherished past. Its citizens, the Personas, are driven by
+      their passions, whether it be sport, art, or fashion.</p>
+    <div class="text-white/50 uppercase mb-2 font-medium">About:</div>
+    <div class="mb-8 grid grid-cols-1 md:grid-cols-3 gap-4">
+      <div class="text-white/50 bg-gray-900/5 p-4 flex items-center justify-between">
+        <span class="uppercase">Powered by:</span>
+        <span class="text-white">Value</span>
+      </div>
+      <div class="text-white/50 bg-gray-900/5 p-4 flex items-center justify-between">
+        <span class="uppercase">Developer:</span>
+        <span class="text-white">Value</span>
+      </div>
+      <div class="text-white/50 bg-gray-900/5 p-4 flex items-center justify-between">
+        <span class="uppercase">Engine:</span>
+        <span class="text-white">Value</span>
+      </div>
+    </div>
+    <div class="text-white/50 uppercase mb-2 font-medium">Activity:</div>
+    <div class="relative overflow-x-auto">
+      <table class="w-full text-sm font-semibold">
+        <thead class="text-xs text-white/50 uppercase bg-gray-900/5 text-left">
+        <tr>
+          <th scope="col" class="px-4 py-2">
+            Item
+          </th>
+          <th scope="col" class="px-4 py-2">
+            Event
+          </th>
+          <th scope="col" class="px-4 py-2">
+            Price
+          </th>
+          <th scope="col" class="px-4 py-2">
+            From
+          </th>
+          <th scope="col" class="px-4 py-2">
+            To
+          </th>
+          <th scope="col" class="px-4 py-2">
+            Date
+          </th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr class="text-white border-b border-b-white/5 whitespace-nowrap">
+          <td class="flex items-center gap-4 font-medium py-4 px-8 min-w-fit">
+            <img class="border border-solid border-white/5 w-12 h-12" src="img/placeholder.png" alt="placeholder">
+            Puff Genesis #187
+          </td>
+          <td class="py-4 px-8">
+            Transfer
+          </td>
+          <td class="py-4 px-8">
+            -
+          </td>
+          <td class="py-4 px-8">
+            0x9bd1...33DD
+          </td>
+          <td class="py-4 px-8">0x9bd1...33DD</td>
+          <td class="py-4 px-8">2024-02-24 23:36 (UTC)</td>
+        </tr>
+        <tr class="text-white border-b border-b-white/5 whitespace-nowrap">
+          <td class="flex items-center gap-4 font-medium py-4 px-8 min-w-fit">
+            <img class="border border-solid border-white/5 w-12 h-12" src="img/placeholder.png" alt="placeholder">
+            Puff Genesis #187
+          </td>
+          <td class="py-4 px-8">
+            Transfer
+          </td>
+          <td class="py-4 px-8">
+            -
+          </td>
+          <td class="py-4 px-8">
+            0x9bd1...33DD
+          </td>
+          <td class="py-4 px-8">0x9bd1...33DD</td>
+          <td class="py-4 px-8">2024-02-24 23:36 (UTC)</td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="flex justify-center items-center mt-8">
+      <div
+        class="flex items-center justify-center divide-x divide-white/5 border border-solid border-white/5 w-fit text-white">
+        <div class="h-14 w-14 flex items-center justify-center cursor-pointer">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M16.5 8L13 12L16.5 16" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+            <path d="M8.5 16L8.5 8" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </div>
+        <div class="h-14 w-14 flex items-center justify-center text-green-900 bg-gray-900/5 cursor-pointer">1</div>
+        <div class="h-14 w-14 flex items-center justify-center cursor-pointer">2</div>
+        <div class="h-14 w-14 flex items-center justify-center cursor-pointer">
+          <svg width="20" height="6" viewBox="0 0 20 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M2.59357 5.13068C2.19253 5.13068 1.82629 5.03291 1.49485 4.83736C1.16341 4.63849 0.89826 4.37334 0.699396 4.0419C0.503847 3.71046 0.406072 3.34422 0.406072 2.94318C0.406072 2.53883 0.503847 2.17259 0.699396 1.84446C0.89826 1.51302 1.16341 1.24953 1.49485 1.05398C1.82629 0.855113 2.19253 0.755682 2.59357 0.755682C2.99793 0.755682 3.36417 0.855113 3.69229 1.05398C4.02373 1.24953 4.28723 1.51302 4.48278 1.84446C4.68164 2.17259 4.78107 2.53883 4.78107 2.94318C4.78107 3.34422 4.68164 3.71046 4.48278 4.0419C4.28723 4.37334 4.02373 4.63849 3.69229 4.83736C3.36417 5.03291 2.99793 5.13068 2.59357 5.13068ZM10.0037 5.13068C9.60269 5.13068 9.23645 5.03291 8.90501 4.83736C8.57357 4.63849 8.30842 4.37334 8.10955 4.0419C7.914 3.71046 7.81623 3.34422 7.81623 2.94318C7.81623 2.53883 7.914 2.17259 8.10955 1.84446C8.30842 1.51302 8.57357 1.24953 8.90501 1.05398C9.23645 0.855113 9.60269 0.755682 10.0037 0.755682C10.4081 0.755682 10.7743 0.855113 11.1025 1.05398C11.4339 1.24953 11.6974 1.51302 11.8929 1.84446C12.0918 2.17259 12.1912 2.53883 12.1912 2.94318C12.1912 3.34422 12.0918 3.71046 11.8929 4.0419C11.6974 4.37334 11.4339 4.63849 11.1025 4.83736C10.7743 5.03291 10.4081 5.13068 10.0037 5.13068ZM17.4139 5.13068C17.0128 5.13068 16.6466 5.03291 16.3152 4.83736C15.9837 4.63849 15.7186 4.37334 15.5197 4.0419C15.3242 3.71046 15.2264 3.34422 15.2264 2.94318C15.2264 2.53883 15.3242 2.17259 15.5197 1.84446C15.7186 1.51302 15.9837 1.24953 16.3152 1.05398C16.6466 0.855113 17.0128 0.755682 17.4139 0.755682C17.8182 0.755682 18.1845 0.855113 18.5126 1.05398C18.844 1.24953 19.1075 1.51302 19.3031 1.84446C19.502 2.17259 19.6014 2.53883 19.6014 2.94318C19.6014 3.34422 19.502 3.71046 19.3031 4.0419C19.1075 4.37334 18.844 4.63849 18.5126 4.83736C18.1845 5.03291 17.8182 5.13068 17.4139 5.13068Z"
+              fill="white" fill-opacity="0.64"/>
+          </svg>
+        </div>
+        <div class="h-14 w-14 flex items-center justify-center cursor-pointer">9</div>
+        <div class="h-14 w-14 flex items-center justify-center cursor-pointer">10</div>
+        <div class="h-14 w-14 flex items-center justify-center cursor-pointer">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7.5 8L11 12L7.5 16" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+            <path d="M15.5 16L15.5 8" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </div>
+      </div>
     </div>
   </div>
-</footer>
+</div>
 </body>
 
 </html>
