--- a/modal-2.html
+++ b/modal-2.html
@@ -92,7 +92,7 @@
       </div>
       <div class="border border-solid border-white/5 p-4 flex items-center justify-between mt-2">
         <div class="flex items-center gap-4">
-          <img width="30" height="30" src="img/grape-no-text.png" alt="">
+          <img width="30px" height="30px" src="img/grape-no-text.png" alt="">
           <span class="text-sm">600.00 OUR Coin</span>
         </div>
         <button
@@ -100,6 +100,32 @@
           Max
         </button>
       </div>
+    </div>
+    <div class="mt-6">
+      <div class="font-medium">
+        Staking NFT
+      </div>
+      <p class="mt-1 text-sm text-white/50">
+        Rewards are added automatically to your total
+        OUR Coin deposit.
+      </p>
+    </div>
+    <div class="mt-6">
+      <div class="flex items-center justify-between font-medium">
+        <div class="text-sm">Stake NFT's</div>
+        <div class="text-white text-xs">
+          <span class="text-white/50">Available:</span>
+          2 NFT's
+        </div>
+      </div>
+      <select class="bg-transparent border border-white/5 text-gray-900 text-sm block w-full p-4 focus:outline-none">
+        <option value="nft 1" selected>
+          NFT 1
+        </option>
+        <option value="nft 2">
+          NFT 2
+        </option>
+      </select>
     </div>
   </div>
 </div>
