--- a/modal-2.html
+++ b/modal-2.html
@@ -127,6 +127,9 @@
         </option>
       </select>
     </div>
+    <button class="mt-8 w-full flex items-center justify-center gap-2 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-10 h-14 text-base font-bold tracking-wider">
+      Stake OUR Coin and NFT's
+    </button>
   </div>
 </div>
 </body>
