--- a/modal-3.html
+++ b/modal-3.html
@@ -71,7 +71,7 @@
 
 <body class="bg-[#4C4CA6]/30 backdrop-blur-md h-screen">
 <div
-  class="fixed top-1/2 left-1/2 bg-[#06020C] w-full max-w-[378px] -translate-x-1/2 -translate-y-1/2 overflow-hidden mt-20 min-h-80">
+  class="fixed top-1/2 left-1/2 bg-[#06020C] w-full max-w-[378px] -translate-x-1/2 -translate-y-1/2 overflow-hidden">
   <div class="p-6 text-white">
     <div class="flex items-center justify-between gap-4">
       <div class="flex items-center gap-4">
