--- a/modal-2.html
+++ b/modal-2.html
@@ -68,7 +68,7 @@
 
 <body class="bg-[#4C4CA6]/30 backdrop-blur-md h-screen">
 <div
-  class="fixed top-1/2 left-1/2 bg-[#06020C] w-full max-w-[378px] -translate-x-1/2 -translate-y-1/2 overflow-hidden mt-20 min-h-80">
+  class="fixed top-1/2 left-1/2 bg-[#06020C] w-full max-w-[378px] -translate-x-1/2 -translate-y-1/2 overflow-hidden">
   <div class="p-6 text-white">
     <div class="flex items-center border border-solid border-white/5 bg-black-900 h-14 w-full">
       <div class="text-base text-white w-full flex items-center justify-center h-full bg-white/5">Stake</div>
