--- a/modal-4.html
+++ b/modal-4.html
@@ -34,7 +34,7 @@
 
 <body class="bg-[#4C4CA6]/30 backdrop-blur-md h-screen">
 <div
-  class="fixed top-1/2 left-1/2 bg-[#06020C] w-full md:max-w-[584px] -translate-x-1/2 -translate-y-1/2 overflow-hidden">
+  class="fixed top-1/2 left-1/2 bg-[#06020C] w-full lg:max-w-[584px] -translate-x-1/2 -translate-y-1/2 overflow-hidden">
   <div class="p-6 text-white flex gap-8">
     <div class="w-full">
       <div class="flex items-center gap-2">
