--- a/index.html
+++ b/index.html
@@ -46,14 +46,15 @@
         <img class="h-14" src="img/logo.png" alt="logo">
       </a>
       <nav class="text-white/60 hidden lg:flex items-center gap-16">
-        <a class="uppercase text-base tracking-wide" href="#">Product</a>
-        <a class="uppercase text-base tracking-wide" href="#">Explore</a>
-        <a class="uppercase text-base tracking-wide" href="#">Save & Share</a>
-        <a class="uppercase text-base tracking-wide" href="#">AI Analysis</a>
+        <a class="uppercase text-base tracking-wide hover:text-white transition" href="#">Product</a>
+        <a class="uppercase text-base tracking-wide hover:text-white transition" href="#">Explore</a>
+        <a class="uppercase text-base tracking-wide hover:text-white transition" href="#">Save & Share</a>
+        <a class="uppercase text-base tracking-wide hover:text-white transition" href="#">AI Analysis</a>
       </nav>
       <div></div>
     </div>
-    <button class="hidden lg:block uppercase bg-white/10 px-8 text-white h-10 z-10 text-sm font-bold tracking-wider">Get Member Access
+    <button class="hidden lg:block uppercase bg-white/10 px-8 text-white h-10 z-10 text-sm font-bold tracking-wider hover:bg-white hover:text-black-900 transition">
+      Get Member Access
     </button>
     <div class="bg-purple-700 blur-[50px] absolute right-28 -bottom-28 z-0 w-[200px] h-[200px]"></div>
   </header>
@@ -101,7 +102,7 @@
     <div class="border-y border-solid border-white/10 w-full mt-24 lg:mt-0">
       <div class="max-w-[1264px] mx-auto lg:px-10">
         <button
-          class="flex flex-col items-center gap-2 uppercase lg:border-x border-solid border-white/10 p-10 lg:p-[70px] w-full lg:w-fit text-sm tracking-wider text-white/80">
+          class="flex flex-col items-center gap-2 uppercase lg:border-x border-solid border-white/10 p-10 lg:p-[70px] w-full lg:w-fit text-sm tracking-wider text-white/80 hover:text-white transition">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M16 7.5L12 11L8 7.5" stroke="white" stroke-opacity="0.8" stroke-width="1.5" stroke-linecap="round"
                   stroke-linejoin="round"/>
@@ -161,7 +162,7 @@
         </h3>
       </div>
       <div class="flex flex-col items-center">
-        <div class="w-14 h-14 bg-white/10 flex items-center justify-center">
+        <div class="w-14 h-14 bg-white/10 flex items-center justify-center hover:bg-white transition">
           <span
             class="bg-gradient-to-br from-blue-900 to-pink-900 text-transparent bg-clip-text inline-block font-semibold text-xl">
             1</span>
@@ -170,7 +171,7 @@
         <p class="text-center mt-2 text-sm text-white/60">Obtain Poolz Finance’s token, POOLX, necessary for
           participating in IDOs.</p>
         <button
-          class="mt-4 lg:mt-8 flex items-center gap-2 bg-transparent uppercase px-10 lg:px-20 h-14 text-base font-bold tracking-wider text-green-900">
+          class="mt-4 lg:mt-8 flex items-center gap-2 bg-transparent uppercase px-10 lg:px-20 h-14 text-base font-bold tracking-wider text-green-900 hover:text-white transition">
           Buy Grape
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M7.5 8L11 12L7.5 16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
@@ -181,7 +182,7 @@
         </button>
       </div>
       <div class="flex flex-col items-center">
-        <div class="w-14 h-14 bg-white/10 flex items-center justify-center">
+        <div class="w-14 h-14 bg-white/10 flex items-center justify-center hover:bg-white transition">
           <span
             class="bg-gradient-to-br from-blue-900 to-pink-900 text-transparent bg-clip-text inline-block font-semibold text-xl">2</span>
         </div>
@@ -189,7 +190,7 @@
         <p class="text-center mt-2 text-sm text-white/60">Ensure your participation in our IDO process by locking your
           POOLX tokens.</p>
         <button
-          class="mt-4 lg:mt-8 flex items-center gap-2 bg-transparent uppercase px-10 lg:px-20 h-14 text-base font-bold tracking-wider text-green-900">
+          class="mt-4 lg:mt-8 flex items-center gap-2 bg-transparent uppercase px-10 lg:px-20 h-14 text-base font-bold tracking-wider text-green-900 hover:text-white transition">
           Lock Grape
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M7.5 8L11 12L7.5 16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
@@ -204,7 +205,7 @@
   <section class="mt-12 lg:mt-14 lg:border-y border-solid border-white/10 w-full">
     <div class="mx-auto max-w-[1200px] grid grid-cols-1 lg:grid-cols-3 gap-12 px-6 lg:px-0">
       <div class="flex flex-col items-center">
-        <div class="w-14 h-14 bg-white/10 flex items-center justify-center">
+        <div class="w-14 h-14 bg-white/10 flex items-center justify-center hover:bg-white transition">
           <span
             class="bg-gradient-to-br from-blue-900 to-pink-900 text-transparent bg-clip-text inline-block font-semibold text-xl">
             4</span>
@@ -213,7 +214,7 @@
         <p class="text-center mt-2 text-sm text-white/60">Complete a simple KYC process to ensure your eligibility for
           IDO participation.</p>
         <button
-          class="mt-4 lg:mt-8 flex items-center gap-2 bg-transparent uppercase px-10 lg:px-20 h-14 text-base font-bold tracking-wider text-green-900">
+          class="mt-4 lg:mt-8 flex items-center gap-2 bg-transparent uppercase px-10 lg:px-20 h-14 text-base font-bold tracking-wider text-green-900 hover:text-white transition">
           Get Started
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M7.5 8L11 12L7.5 16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
@@ -224,7 +225,7 @@
         </button>
       </div>
       <div class="flex flex-col items-center">
-        <div class="w-14 h-14 bg-white/10 flex items-center justify-center">
+        <div class="w-14 h-14 bg-white/10 flex items-center justify-center hover:bg-white transition">
           <span
             class="bg-gradient-to-br from-blue-900 to-pink-900 text-transparent bg-clip-text inline-block font-semibold text-xl">4</span>
         </div>
@@ -232,7 +233,7 @@
         <p class="text-center mt-2 text-sm text-white/60">Apply for the whitelist to gain early access & priority
           participation in upcoming IDOs.</p>
         <button
-          class="mt-4 lg:mt-8 flex items-center gap-2 bg-transparent uppercase px-10 lg:px-20 h-14 text-base font-bold tracking-wider text-green-900">
+          class="mt-4 lg:mt-8 flex items-center gap-2 bg-transparent uppercase px-10 lg:px-20 h-14 text-base font-bold tracking-wider text-green-900 hover:text-white transition">
           Join Whitelist
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M7.5 8L11 12L7.5 16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
@@ -243,7 +244,7 @@
         </button>
       </div>
       <div class="flex flex-col items-center">
-        <div class="w-14 h-14 bg-white/10 flex items-center justify-center">
+        <div class="w-14 h-14 bg-white/10 flex items-center justify-center hover:bg-white transition">
           <span
             class="bg-gradient-to-br from-blue-900 to-pink-900 text-transparent bg-clip-text inline-block font-semibold text-xl">
             5</span>
@@ -252,7 +253,7 @@
         <p class="text-center mt-2 text-sm text-white/60">Once you’ve completed these steps, explore & participate in
           the exciting world of IDOs.</p>
         <button
-          class="mt-4 lg:mt-8 flex items-center gap-2 bg-transparent uppercase px-10 lg:px-20 h-14 text-base font-bold tracking-wider text-green-900">
+          class="mt-4 lg:mt-8 flex items-center gap-2 bg-transparent uppercase px-10 lg:px-20 h-14 text-base font-bold tracking-wider text-green-900 hover:text-white transition">
           How to participate
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M7.5 8L11 12L7.5 16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
@@ -289,7 +290,7 @@
           drop in collaboration with some of the top artists in the space
         </p>
         <button
-          class="mt-6 flex items-center gap-2 bg-transparent uppercase text-base tracking-wider text-green-900">
+          class="mt-6 flex items-center gap-2 bg-transparent uppercase text-base tracking-wider text-green-900 hover:text-white transition">
           Learn More
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M7.5 8L11 12L7.5 16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
@@ -314,7 +315,7 @@
           drop in collaboration with some of the top artists in the space
         </p>
         <button
-          class="mt-6 flex items-center gap-2 bg-transparent uppercase text-base tracking-wider text-green-900">
+          class="mt-6 flex items-center gap-2 bg-transparent uppercase text-base tracking-wider text-green-900 hover:text-white transition">
           Learn More
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M7.5 8L11 12L7.5 16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
@@ -337,53 +338,53 @@
     </p>
     <div class="grid grid-cols-1 lg:grid-cols-2 bg-gray-900/5 mt-14">
       <div class="p-10">
-        <div class="text-5xl font-semibold text-green-900 text-center">10,960</div>
+        <div class="text-5xl font-semibold text-green-900 text-center hover:text-white transition">10,960</div>
         <div class="mt-2 text-center text-lg text-white/60 tracking-[0.72px]">Membership NTFs</div>
       </div>
       <div class="p-10">
-        <div class="text-5xl font-semibold text-green-900 text-center">153,940</div>
+        <div class="text-5xl font-semibold text-green-900 text-center hover:text-white transition">153,940</div>
         <div class="mt-2 text-center text-lg text-white/60 tracking-[0.72px]">Member Owned NFTs</div>
       </div>
     </div>
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mt-8">
       <div class="flex border border-white/10 h-[164px] lg:h-[232px]">
         <div class="flex justify-center flex-col px-6 lg:px-10 py-10 lg:py-16 w-full lg:w-2/5">
-          <div class="text-4xl lg:text-5xl font-semibold leading-none">148</div>
+          <div class="text-4xl lg:text-5xl font-semibold leading-none hover:text-green-900 transition">148</div>
           <div class="text-white/60 text-lg tracking-[0.72px] font-medium mt-2 text-sm lg:text-base">CryptoPunks</div>
         </div>
         <img class="w-full lg:w-3/5 h-full object-cover" src="img/placeholder.png" alt="placeholder">
       </div>
       <div class="flex border border-white/10 h-[164px] lg:h-[232px]">
         <div class="flex justify-center flex-col px-6 lg:px-10 py-10 lg:py-16w-full lg:w-2/5">
-          <div class="text-4xl lg:text-5xl font-semibold leading-none">817</div>
+          <div class="text-4xl lg:text-5xl font-semibold leading-none hover:text-green-900 transition">817</div>
           <div class="text-white/60 text-lg tracking-[0.72px] font-medium mt-2 text-sm lg:text-base">Bored Apes</div>
         </div>
         <img class="w-full lg:w-3/5 h-full object-cover" src="img/placeholder.png" alt="placeholder">
       </div>
       <div class="flex border border-white/10 h-[164px] lg:h-[232px]">
         <div class="flex justify-center flex-col px-6 lg:px-10 py-10 lg:py-16 w-full lg:w-2/5">
-          <div class="text-4xl lg:text-5xl font-semibold leading-none">499</div>
+          <div class="text-4xl lg:text-5xl font-semibold leading-none hover:text-green-900 transition">499</div>
           <div class="text-white/60 text-lg tracking-[0.72px] font-medium mt-2 text-sm lg:text-base">Meebits</div>
         </div>
         <img class="w-full lg:w-3/5 h-full object-cover" src="img/placeholder.png" alt="placeholder">
       </div>
       <div class="flex border border-white/10 h-[164px] lg:h-[232px]">
         <div class="flex justify-center flex-col px-6 lg:px-10 py-10 lg:py-16 w-full lg:w-2/5">
-          <div class="text-4xl lg:text-5xl font-semibold leading-none">5,288</div>
+          <div class="text-4xl lg:text-5xl font-semibold leading-none hover:text-green-900 transition">5,288</div>
           <div class="text-white/60 text-lg tracking-[0.72px] font-medium mt-2 text-sm lg:text-base">Art Blocks</div>
         </div>
         <img class="w-full lg:w-3/5 h-full object-cover" src="img/placeholder.png" alt="placeholder">
       </div>
       <div class="flex border border-white/10 h-[164px] lg:h-[232px]">
         <div class="flex justify-center flex-col px-6 lg:px-10 py-10 lg:py-16 w-full lg:w-2/5">
-          <div class="text-4xl lg:text-5xl font-semibold leading-none">326</div>
+          <div class="text-4xl lg:text-5xl font-semibold leading-none hover:text-green-900 transition">326</div>
           <div class="text-white/60 text-lg tracking-[0.72px] font-medium mt-2 text-sm lg:text-base">SuperRare 1:1 NFTs</div>
         </div>
         <img class="w-full lg:w-3/5 h-full object-cover" src="img/placeholder.png" alt="placeholder">
       </div>
       <div class="flex border border-white/10 h-[164px] lg:h-[232px]">
         <div class="flex justify-center flex-col px-6 lg:px-10 py-10 lg:py-16 w-full lg:w-2/5">
-          <div class="text-4xl lg:text-5xl font-semibold leading-none">273</div>
+          <div class="text-4xl lg:text-5xl font-semibold leading-none hover:text-green-900 transition">273</div>
           <div class="text-white/60 text-lg tracking-[0.72px] font-medium mt-2 text-sm lg:text-base">Metaverse</div>
         </div>
         <img class="w-full lg:w-3/5 h-full object-cover" src="img/placeholder.png" alt="placeholder">
@@ -417,8 +418,8 @@
   <div class="mx-auto max-w-[1200px] flex flex-col lg:flex-row justify-between gap-8 py-8 px-6 lg:px-0 lg:py-16">
     <div class="text-sm text-white/60">Copyright © 2024 Chainmind. All rights reserved.</div>
     <div class="text-sm text-white/60 flex items-center gap-10">
-      <a href="#">Privacy Policy</a>
-      <a href="#">Terms of Use</a>
+      <a class="hover:text-white transition" href="#">Privacy Policy</a>
+      <a class="hover:text-white transition" href="#">Terms of Use</a>
     </div>
   </div>
 </footer>
