--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <a class="uppercase tracking-wider text-white/60" href="#">Contact us</a>
         <a class="uppercase tracking-wider text-white/60" href="#">Member access</a>
       </nav>
-      <div class="pt-24 lg:pt-40 px-6 lg:px-8 flex items-center justify-center flex-col lg:items-start lg:justify-start">
+      <div class="pt-24 lg:pt-40 px-6 lg:px-8 flex items-center justify-center flex-col lg:items-start lg:justify-start animate-fade">
         <img class="h-[70px] lg:h-24" src="img/grape-no-text.png" alt="logo">
         <h1 class="text-center lg:text-left text-4xl lg:text-6xl mt-6 leading-normal">
           <span class="font-semibold block">GRAPE,</span>
