--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </div>
     <div class="border-y border-solid border-white/10 w-full flex lg:justify-center mt-8 lg:mt-0 px-6 lg:px-0">
       <button
-        class="text-white flex items-center gap-4 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-10 h-14 text-base font-bold tracking-wider">
+        class="text-white flex items-center gap-4 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-10 h-14 text-base font-bold tracking-wider lg:ml-[152px]">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <g clip-path="url(#clip0_58_43)">
             <path fill-rule="evenodd" clip-rule="evenodd"
